--- a/3-checkout/public/index.html
+++ b/3-checkout/public/index.html
@@ -1,2 +1,14 @@
-
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Multistep checkout</title>
+    <script src="lib/axios/dist/axios.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  </head>
+  <body>
+    <h1></h1>
+    <div id="app"></div>
+    <script type="module" src="app.js"></script>
+  </body>
+</html>
