Created Inputs For All Created Basic CSS Requiring Functions for Updating State & POST request

--- a/3-checkout/public/index.html
+++ b/3-checkout/public/index.html
@@ -3,7 +3,8 @@
 
   <head>
     <title>Multistep checkout</title>
-    <!-- <script src="lib/axios/dist/axios.min.js"></script> -->
+    <script src="lib/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="./index.css">
   </head>
 
   <body>
