--- a/3-checkout/public/index.html
+++ b/3-checkout/public/index.html
@@ -3,11 +3,12 @@
 
   <head>
     <title>Multistep checkout</title>
-    <script src="lib/axios/dist/axios.min.js"></script>
+    <!-- <script src="lib/axios/dist/axios.min.js"></script> -->
     <link rel="stylesheet" href="./index.css">
   </head>
 
   <body>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <div id="app"></div>
